# radar-simulation-ml

./: .gitignore  README.md  pyproject.toml
models/: ba_losses.txt  model_losses.txt  movement_mlp_h128_best.pt  nextstep_h128_lr1e-3_best.pt  nextstep_h200_l2_d0_best.pt
models/17.12/: nextstep_h160_lr1e-3_best.pt
radar-simulation-ml/: build_training_set.py  custom_codecs.py  pyproject.toml  test_lstm.py  test_naive.py  test_normalized.py  train_lstm.py  train_nn.py
src/analysis/: heatmap.py  time_deltas.py
src/api/: main.py  router.py
src/api/endpoints/: __init__.py  simulation.py
src/api/inference/: __init__.py  model_store.py
src/api/models/: __init__.py  flight_point.py
src/evaluation/: test_lstm.py  test_naive.py  test_normalized.py
src/tools/: __init__.py  build_training_set.py
src/training/: __init__.py  train_lstm.py  train_nn.py
